2005-03-28    Ping Cheng <pingc@wacom.com>
	* Updated linuxwacom.sf.net website
	* Released linuxwacom-0.6.7 as beta

2005-03-18    Ping Cheng <pingc@wacom.com>
	* Added support to kernel 2.6.11
	* Cleaned wacom_graphire_irq routine

2005-03-10    Ping Cheng <pingc@wacom.com>
	* Merged Jens' 2.6.*/Makefile.in and a few other updates
	* Added Cintiq 21UX support
	* Added 2 new X config options: Gimp and MMonitor
		"Gimp off" reports raw x and y in valuator;
		"Gimp on" reports modified x and y when Top 
			and Bottom values are set;
		default is on to support Gimp;
		"MMonitor on" moves cursor accross screens;
		"MMonitor off" cursor stays in the current screen;
		default is on.
	* Fixed bug 1146135

2005-02-28    Ping Cheng <pingc@wacom.com>
	* Fixed Graphire/Volito button bug
	* Added xserver64 option to configure
	* Added EVIOCGRAB to wcmUSB.c as suggested by Vojtech Pavlik to
	  grab the USB tablet event so nothing else can get the data
	  (I don't see the effect though)
	* Modified acinclude.m4 for tcl.h default checking (Jens Georg)

2005-02-02    Ping Cheng <pingc@wacom.com>
	* Added missing routine in src/2.6.8/wacom.c
	* Fixed maxZ in wcmSerial.c for penpartner

2004-12-01    Ping Cheng <pingc@wacom.com>
	* Removed src/2.6.x/Makefile.am to build .ko locally (Jens Georg)
	* Updated src/2.6.x/Makefile.in (Jens Georg)
	* Added support for kernel 2.6.10
	* Fixed a P4 bug in wcmSerial.c
	* Added wacom.man to dev
	* Released 0.6.6
	* Updated web pages

2004-11-05    Ping Cheng <pingc@wacom.com>
	* Updated configure script  Kristian Høgsberg <krh@redhat.com>
	* Removed XFree86v3 support
	* Cleaned wacom.c files
	* Released 0.6.5 as beta

2004-11-02    Ping Cheng <pingc@wacom.com>
	* Added subdirs for each kernel 2.6.x
	* Updated web scripts

2004-10-15    Ping Cheng <pingc@wacom.com>
	* Fixed Intuos3 pressure bug

2004-10-06    Ping Cheng <pingc@wacom.com>
	* Added Intuos3 support
	* Fixed z-rot valuator initialization error
